# forge-mind

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  roadmap.md
examples/: basic_self_improvement.py
src/forge_mind/: __init__.py  agent.py  benchmark.py  budget.py  cycle.py  harness.py  meta_optimizer.py  types.py
tests/: test_agent.py  test_benchmark.py  test_budget.py  test_cycle.py  test_harness.py
