[project]
name = "forge-mind"
version = "0.1.0"
description = "Layer 3 of the Forge ecosystem: AutoAgent-style self-improvement loops where the meta-agent is paid for in CU."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ablaze" }]
keywords = ["forge", "ai-agents", "self-improvement", "autoagent", "compute-economy", "meta-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/clearclown/forge-mind"
Repository = "https://github.com/clearclown/forge-mind"
"Bug Tracker" = "https://github.com/clearclown/forge-mind/issues"
"Forge Protocol" = "https://github.com/clearclown/forge"
"Forge Economics" = "https://github.com/clearclown/forge-economics"
"Forge Agora" = "https://github.com/clearclown/forge-agora"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
no_implicit_optional = true
